welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:16: error: '<-' expected but ')' found.
for(j<1 to getMondeLargeur-1) {
                            ^Array2:32: error: illegal start of simple expression
} 
^